# CAI_STUDIO_AGENT

./: .coveragerc  .dockerignore  .gitignore  .project-metadata.yaml  DEVELOPING.md  Dockerfile  Dockerfile.dev  Makefile  README.md  cdsw-build.sh  env.example  eslint.config.js  eslint.config.mjs  jest.config.js  jest.setup.js  next.config.ts  package-lock.json  package.json  pyproject.toml  requirements.uv.txt  tailwind.config.js  tsconfig.json
.devcontainer/: devcontainer.json
studio/workflow_engine/: .coveragerc  cdsw-build.sh  pyproject.toml
studio/workflow_engine/src/engine/: artifact.py  consts.py  ops.py  types.py  utils.py
studio/workflow_engine/src/engine/crewai/: agents.py  artifact.py  autosync.py  crew.py  events.py  llms.py  mcp.py  run.py  tools.py  trace_context.py  tracing.py  wrappers.py  wrappers_plain.py  wrappers_smart.py
studio/workflow_engine/src/engine/crewai/manager/: notes.py  plan_injection.py  planning_decision.py  planning_evaluation.py  planning_generate.py  state_context.py
studio/workflow_engine/src/engine/crewai/prompts/: anti_loop_note.md  artifacts_suffix_assistant.md  artifacts_suffix_manager.md  assistant_summarization_instruction.md  context_headers.md  evaluation_instruction.md  hard_constraint.md  human_input_required_suffix.md  loader.py  note_all_completed.md  note_caution_continue.md  note_critical_failure.md  note_human_input_required.md  plan_injection_header.md  planning_decision_block.md  planning_decision_instruction.md  planning_disable_note.md  planning_instruction.md
studio/workflow_engine/src/engine/crewai/utils/: messages.py  summarization.py  summary_cache.py
studio/workflow_engine/src/engine/entry/: cli.py  fastapi.py  runner.py  workbench.py
studio/workflow_engine/src/engine/langgraph/: artifact.py  run.py  tracing.py
studio/workflow_engine/src/engine/tool/: events.py  run.py
studio/workflow_engine/tests/: test_crewai_artifact.py  test_crewai_events.py  test_crewai_tools.py  test_langgraph_artifact.py  test_llms.py  test_tools.py
(+396 files in other folders)
