[project]
name = "agent-studio-workflow-engine"
version = "0.0.1"
description = "Agent Studio Workflow Engine"
requires-python = ">=3.10"
dependencies = [
    "arize-phoenix==8.20.0",
    "arize-phoenix-otel==0.9.0",
    "crewai==0.119.0",
    "gql==3.5.0",
    "mcp==1.12.2",
    "mcpadapt==0.1.11",
    "mcpadapt[crewai]==0.1.11",
    "openinference-instrumentation-crewai==0.1.7",
    "openinference-instrumentation-langchain>=0.1.43",
    "openinference-instrumentation-litellm==0.1.14",
    "opentelemetry-api==1.31.1",
    "pydantic==2.11.1",
    "pysqlite3-binary==0.5.4",
    "boto3>=1.34.0",
]

[dependency-groups]
dev = [
    "autoflake==2.3.1",
    "debugpy==1.8.12",
    "pytest==8.2.2",
    "pytest-cov==5.0.0",
    "ruff==0.9.4",
]

[tool.ruff]
line-length = 120

[tool.setuptools.packages.find]
where = ["src"]
